# identity-js

./: .eslintignore  .eslintrc.compat.yml  .eslintrc.yml  .flowconfig  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  run-ci.py  tbump.toml  tsconfig.json
.github/: issue_template.md
.github/workflows/: deploy.yml  tests.yml
config/: babel.config-eslint.js  babel.config.js  babel.require-hook.js  rollup.config.js  tsconfig.base.json  tsconfig.tests.json  tsconfig.types.base.json  webpack.config.base.js
config/compat/: ie11.js
config/karma/: karma.config.base.js  karma.config.ci.js  karma.webpack.config.js  launchers.js
src/: crypto.d.ts
