[tool.poetry]
name = "tanker-identity-node-sdk"
version = "0.1.0"
description = "Tanker Identity Node.js SDK"
authors = ["Tanker dev team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tbump = "6.3.2"


[tool.poetry.dev-dependencies]
black = "21.6b0"
flake8 = "3.9.2"
mypy = "0.902"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
