[tool.poetry]
name = "tanker-identity-node-sdk"
version = "0.1.0"
description = "Tanker Identity Node.js SDK"
authors = ["Tanker dev team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.8"
tbump = "6.9.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "4.0.1"
flake8-comprehensions = "3.10.0"
isort = "5.10.1"
mypy = "0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
